--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,8 +15,8 @@
   
   .profile-icon {
     width: 13%;
-    margin-left: 85%;
-    margin-top: 7px;
+    margin-left: 86%;
+    margin-top: 32%;
   }
   
   .profile-dropdown {
