--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,74 +1,55 @@
 .menu-container {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    z-index: 2;
-  }
-  
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
+}
+
+.menu {
+  background-color: #f4f4f4;
+  justify-content: space-between;
+  display: flex;
+  padding: 2%;
+  transition: transform 0.3s ease;
+}
+
+.menu.hidden {
+  transform: translateY(100%);
+}
+
+.menu-item { 
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+/* Adicione as imagens de alta resolução */
+.menu-item.home {
+  background-image: url('../image/icon-home.png');
+}
+
+.menu-item.agenda {
+  background-image: url('../image/icon-agenda.png');
+}
+
+.menu-item.sacramento {
+  background-image: url('../image/icon-sacramento.png');
+}
+
+.menu-item.frequencia {
+  background-image: url('../image/icon-frequencia.png');
+}
+
+.menu-item.topicos {
+  background-image: url('../image/icon-topicos.png');
+}
+
+@media screen and (max-width: 3000vw) {
   .menu {
-    background-color: #f4f4f4;
-    display: flex;
-    padding: 2%;
-    transition: transform 0.3s ease;
-  }
-  
-  .menu.hidden {
-    transform: translateY(100%);
-  }
-  
-  .menu-item {
-    background-size: cover;
-    margin-left: 11%;
-    position: relative;
-    width: 8vw;
+    max-width: 100vw;
   }
 
-  .menu-arrow {
-    position: absolute;
-    background-color: #f4f4f4;
-    border-radius: 50%;
-    margin-top: 2vw;
-    margin-left: 2vw;
+  .menu-item {
+    width: 7vw;
   }
-  
-  
-  /* Adicione as imagens de alta resolução */
-  .menu-item.home {
-    background-image: url('../image/icon-home.png');
-  }
-  
-  .menu-item.agenda {
-    background-image: url('../image/icon-agenda.png');
-  }
-  
-  .menu-item.sacramento {
-    background-image: url('../image/icon-sacramento.png');
-  }
-  
-  .menu-item.frequencia {
-    background-image: url('../image/icon-frequencia.png');
-  }
-  
-  .menu-item.topicos {
-    background-image: url('../image/icon-topicos.png');
-  }
-  
-  @media screen and (max-width: 3000vw) {
-    .menu {
-      max-width: 100vw;
-    }
-  
-    .menu-item {
-      width: 8vw;
-    }
-  }
-  
-  .menu-item.selected {
-    background-color: #a09e9e;
-    border-radius: 50%;
-  }
-  
-  .menu-arrow.selected {
-    background-color: #a09e9e;
-    border-radius: 50%;
-  }
+}
