--- a/src/components/MaisAcessados.css
+++ b/src/components/MaisAcessados.css
@@ -28,7 +28,7 @@
   margin: 5px;
   width: 28.2vw;
   height: 23vw;
-  display: inline-flex;
+  display:inline-flex;
   flex-direction: column;
   align-items: center;
   font-size: 3vw;
@@ -44,6 +44,7 @@
 
 .icons {
   width: 80%;
+  margin-left: 8%;
   height: 50%;
   object-fit: contain;
 }
