--- a/src/components/ProfileEdit.css
+++ b/src/components/ProfileEdit.css
@@ -97,7 +97,7 @@
     position: absolute;
     top: 3px;
     right: 20px;
-    font-size: 20px;
+    width: 6%;
     background: none;
     color: #007D85;
     border: none;
