Ajustes topicos e oradores

--- a/src/components/TopicosEvangelho.css
+++ b/src/components/TopicosEvangelho.css
@@ -1,3 +1,10 @@
 .paragrafo-topicos {
     margin-bottom: 5%;
 }
+
+.reload{
+    position: absolute;
+    margin-top: -3%;
+    right: 47%;
+    width: 7%;
+}
